--- a/src/main/resources/static/HTML/css/style.css
+++ b/src/main/resources/static/HTML/css/style.css
@@ -32,8 +32,8 @@
 .g_newslist-browse img{width: 0.31rem; height: 0.19rem; margin-right: 0.1rem; position: relative;}
 .g_newslist-data time{font-size: 0.24rem; color: #a6a6a6; float: left; margin-left: 0.8rem;}
 .g_comment{padding-top: 0.52rem; padding-bottom: 1.34rem;}
-.g_comment-head{padding: 0 0.3rem 0 0.53rem; position: relative; font-size: 0.32rem; color: #000;}
-.g_comment-head::before{display: block; width: 0.09rem; height: 0.34rem; background: #43bdec; position: absolute; left: 0.3rem; top: 0.06rem; content: '';}
+
+
 .g_comment-list{margin-top: 0.53rem;}
 .g_comment-list ul li{padding: 0 0.3rem 0.3rem 1.25rem; border-bottom: 1px solid #ebebeb; margin-bottom: 0.3rem; position: relative;}
 .g_comment-list ul li:last-child{margin-bottom: 0;}
@@ -70,8 +70,53 @@
 
 
 /*关于*/
-.g_about-container{padding: 0.3rem; font-size: 0.28rem; color: #4c4c4c; line-height: 0.48rem;}
-.g_about-container img{display: block; width: 100%; margin: 0.3rem auto;}
+.g_about-container{padding: 0.3rem 0.3rem 0.66rem; font-size: 0.28rem; color: #4c4c4c; line-height: 0.48rem; border-bottom: 0.12rem solid #f7f7f7;}
+.g_luokuan{text-align: right; margin-top: 0.2rem;}
+.g_about-container video{display: block; width: 100%; height: 3.88rem; margin-top: 0.42rem; object-fit:fill;}
+.g_about-nav{margin-top: 0.2rem; width: 100%; height: 2rem;}
+.g_nav-box{width: 100%; height: 2rem; box-shadow: 0px 6px 10px rgba(0,0,0,0.04); background: #fff; z-index: 1000;}
+.g_nav-box ul{overflow: hidden;}
+.g_nav-box ul li{height: 1rem; border-bottom: 1px solid #ebebeb; float: left; width: 2.3rem; position: relative;}
+.g_nav-box ul li:nth-child(2),
+.g_nav-box ul li:nth-child(5){width: 2.9rem;}
+.g_nav-box ul li:nth-child(n+4){border-bottom: 0 none;}
+.g_nav-box ul li a{display: block; width: 100%; text-align: center; height: 1rem; line-height: 1rem; font-size: 0.28rem; color: #000; position: relative;}
+.g_nav-box ul li::after{content: ''; display: block; width: 1px; height: 0.37rem; background: #ebebeb; position: absolute; right: 0; top: 50%; margin-top: -0.18rem;}
+.g_nav-box ul li:nth-child(3n)::after{display: none;}
+.g_nav-box ul li.g_nav-dqys a::after{content: ''; display: block; width: 0.5rem; height: 0.05rem; background: #43bdec; position: absolute; left: 50%; margin-left: -0.25rem; bottom: 0.15rem;}
+.g_nav-box ul li.g_nav-dqys a{color: #43bdec;}
+.g_about-article{margin-top: 0.68rem; padding: 0 0.3rem 0.66rem; border-bottom: 0.12rem solid #f7f7f7;}
+.g_about-head{padding-left: 0.33rem; position: relative; font-size: 0.28rem; color: #000;}
+.g_about-head::before{display: block; width: 0.09rem; height: 0.34rem; background: #43bdec; position: absolute; left: 0; top: 0.04rem; content: '';}
+.g_about-content{font-size: 0.28rem; line-height: 0.48rem; color: #333; margin-top: 0.3rem;}
+.g_about-code01{margin-top: 0.4rem;}
+.g_about-code01 img{display: block; margin: 0 auto; width: 2.1rem; height: 2.1rem;}
+.g_about-code01 p{text-align: center; font-size: 0.24rem; color: #666; margin-top: 0.15rem;}
+.g_about-timeline{margin-top: 0.3rem;}
+.g_timeline-head{text-align: center; font-size: 0.26rem; color: #333;}
+.g_about-timeline ul{margin-top: 0.48rem; position: relative;}
+.g_about-timeline ul li:nth-child(1)::after{content: ''; width: 9px; height: 5px; background: #fff; display: block; position: absolute; left: -4px; top:0;}
+.g_about-timeline ul li{padding-left: 0.4rem; position: relative; padding-bottom: 0.52rem; border-left: 1px solid #999; line-height: 0.48rem; margin-bottom: -0.1rem;}
+.g_about-timeline ul li:last-child{border: 0 none;}
+.g_about-timeline ul li::before{content: ''; display: block; width: 0.23rem; height: 0.23rem; background: url(../images/g_17.png) no-repeat center; background-size: 0.23rem 0.23rem; position: absolute; left: -0.11rem; top: 0.1rem;}
+.g_timeline-name{font-size: 0.26rem; color: #000;}
+.g_timeline-date{display: block; font-size: 0.26rem; color: #999;}
+.g_timeline-time{display: block; font-size: 0.26rem; color: #000;}
+.g_timeline-address{font-size: 0.26rem; color: #000;}
+.g_timeline-remarks{font-size: 0.26rem; color: #999; padding-left: 0.8rem; position: relative;}
+.g_timeline-remarks b{position: absolute; left: 0; top: 0;}
+.g_about-subtitle{margin-top: 0.3rem;}
+.g_about-content img{display: block; width: 100%; margin-top: 0.2rem;}
+.g_about-code02{padding: 0.6rem 0 1rem;}
+.g_about-code02 img{display: block; width: 2.1rem; height: 2.1rem; margin: 0 auto;}
+.g_about-code02 p{text-align: center; font-size: 0.24rem; color: #666; margin-top: 0.15rem;}
+
+
+
+
+
+
+
 
 
 
